# chat-distribuido

./: README.md  pyproject.toml
src/client/: app.py  main.py  print_commands.py  receive_messages.py  socket_client.py
src/common/: __init__.py
src/server/: client_service.py  group_service.py  main.py  message.py  models.py
