[tool.poetry]
name = "sistemas-distribuidos"
version = "0.1.0"
description = ""
authors = ["Gustavo Santos <gustavosisa@outlook.com>"]
readme = "README.md"
packages = [{ include = "sistemas_distribuidos" }]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
